--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,20 @@ header nav ul li a:hover {
     background: rgba(255, 255, 255, 0.15);
 }
 
-header .container img {
-    height: 30px;
+header .container .logo { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+header .container .logo-image {
+    height: 65px;
+}
+
+header .container .logo-name {
+    color: white;
+    font-size: 24px;
+    padding-left: 6px;
+    font-weight: bold;
 }
 
 #checkbox-menu {
